Wed Feb  2 13:23:16 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (ctor, parse, do_tag), htcommon/defaults.cc:
	Add max_keywords attribute to limit meta keyword spamming.
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.

Wed Feb  2 12:57:40 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc (RetrieveLocal), htdig/Document.h,
	htdig/Retriever.cc (Initial, parse_url, GetLocal, GetLocalUser,
	IsLocalURL, got_href, got_redirect), htdig/Retriever.h,
	htdig/Server.cc (ctor), htdig/Server.h: Add in Paul Henson's
	enhancements to local_urls, local_default_urls & local_default_doc.
	* htcommon/defaults.cc: Document these.

Wed Feb  2 00:11:03 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/RELEASE.html: Finish up with notes on all significant 
	new attributes.

	* htdoc/FAQ.html, htdoc/where.html: Mention new 3.2.0b1 release
	as a beta.
	
	* contrib/README: Update to mention new scripts.

	* installdir/mime.types: Add default Apache mime.types file for
	systems that do not already have one.

	* installdir/Makefile.am: Make sure it is installed by default.

	* installdir/Makefile.in: Regenerate using automake.

	* htcommon/defaults.cc: Add documentation for mime_types
	attribute, remove currently unused image_alt_factor, and add
	documentation for external_protocols.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.

Tue Feb  1 10:24:19 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/parser.cc (score): fix up score calculations for
	correctness and efficiency.

Mon Jan 31 16:29:20 2000  Marcel Bosc  <bosc@ceic.com>

	* htword/WordBitCompress.cc: fixed endian bug in compression

Sat Jan 29 21:14:03 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/parser.cc (score): Change config.Value (which returns
	int) to config.Double to preserve accuracy of attributes.
