@@ -1,3 +1,10 @@
+Wed Feb  2 13:29:48 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htlib/QuotedStringList.cc (Create): fix PR#743, where quoted string
+	lists didn't allow embedded quotes of opposite sort in strings
+	(e.g. "'" or '"'), and fix to avoid overrunning end of string
+	if it ends with backslash.
+
 Wed Feb  2 13:23:16 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdig/HTML.cc (ctor, parse, do_tag), htcommon/defaults.cc:
